# valueeval24-hierocles-of-alexandria

./: .gitignore  CITATION.cff  LICENSE  README.md  out.tsv  pyproject.toml  requirements.txt
.github/workflows/: methodshub.yml  publish.yml  test.yml
data/examples/: simple-output.tsv  simple.tsv  simple.txt
docs/: development.md
src/valueeval24_hierocles_of_alexandria/: __init__.py  __main__.py  multi_head_model.py  value_classifier.py
tests/: test_classifier.py  test_examples.py  test_processing.py
