[project]
name = "valueeval24-hierocles-of-alexandria"
version = "0.4.0"
description = "Detect human values in text (winning model of ValueEval'24)"
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "transformers[torch] (>=4.56.2,!=4.57.0,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "protobuf (>=5.29.1,<6.0.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "bitsandbytes (>=0.48.1,<0.49.0)",
    "pandas (>=2.3.3,<3.0.0)",
]
license = { file = "LICENSE" }
keywords = [ "ai", "artificial intelligence", "classification", "human values", "schwartz values", "vallueeval" ]
authors = [
    {name = "Sotirios Legkas"},
    {name = "Christina Christodoulou"},
    {name = "Matthaios Zidianakis"},
    {name = "Dimitrios Koutrintzes"},
    {name = "Maria Dagioglou"},
    {name = "Georgios Petasis"},
    {name = "Nicolas Handke"},
    {name = "Johannes Kiesel"}
]
maintainers = [
    {name = "Johannes Kiesel",email = "Johannes.Kiesel@gesis.org"}
]

[project.urls]
"Source" = "https://github.com/touche-webis-de/valueeval24-hierocles-of-alexandria"
"Issues" = "https://github.com/touche-webis-de/valueeval24-hierocles-of-alexandria/issues"

[tool.poetry]
packages = [{include = "valueeval24_hierocles_of_alexandria", from = "src"}]

[tool.poetry.group.development]
optional = true
[tool.poetry.group.development.dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
